# midi-sniffer

./: Cargo.toml  README.md  git push
.github/workflows/: CI.yml
src/: bytes.rs  main.rs  sniffer.rs
src/midi/: io.rs  mod.rs  msg.rs  port.rs
src/ui/: app.rs  controller.rs  dispatcher.rs  main.rs  mod.rs  msg_list.rs  port.rs  sniffer.rs
