[package]
name = "midi-sniffer"
version = "0.1.0"
authors = ["François Laignel <fengalin@free.fr>"]
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
eframe = "0.17"
env_logger = "0.9"
log = { version = "0.4", features = ["release_max_level_debug"] }
midi-msg = "0.3.0"
# Use master due to https://github.com/Boddlnagg/midir/pull/99
midir = { git = "https://github.com/Boddlnagg/midir" }
once_cell = "1.0"
thiserror = "1.0"

[features]
default = ["jack"]

jack = ["midir/jack"]
