[package]
name = "midi-sniffer"
version = "0.1.0"
authors = ["François Laignel <fengalin@free.fr>"]
categories = ["Multimedia"]
keywords = ["midi", "sniffer", "analyzer", "gui"]
description = "MIDI messages sniffer"
license = "MIT"
readme = "README.md"
repository = "https://github.com/fengalin/midi-sniffer"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
eframe = { version = "0.18", features = ["persistence"] }
env_logger = "0.9"
log = { version = "0.4", features = ["release_max_level_debug"] }
midi-msg = "0.3.0"
# Use master due to https://github.com/Boddlnagg/midir/pull/99
midir = { git = "https://github.com/Boddlnagg/midir" }
once_cell = "1.0"
rfd = { version = "0.8.1", optional = true }
ron = { version = "0.7", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
thiserror = "1.0"

[features]
default = ["save"]

jack = ["midir/jack"]
save = ["rfd", "ron", "serde"]

[profile.release]
lto = true
